--- a/senate-data.html
+++ b/senate-data.html
@@ -1,114 +1,191 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="utf-8" />
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1, shrink-to-fit=no"
+    />
+    <link
+      rel="stylesheet"
+      href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+      integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T"
+      crossorigin="anonymous"
+    />
+    <link rel="stylesheet" type="text/css" href="main.css" />
+    <link
+      rel="stylesheet"
+      type="text/css"
+      href="https://stackpath.bootstrapcdn.com/bootswatch/4.3.1/darkly/bootstrap.min.css"
+    />
+    <title>Senators</title>
+  </head>
 
-<head>
-	<meta charset="utf-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
-		integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-	<link rel="stylesheet" type="text/css" href="main.css">
-	<link rel="stylesheet" type="text/css" href="https://stackpath.bootstrapcdn.com/bootswatch/4.3.1/darkly/bootstrap.min.css">
-	<title>Senators</title>
-</head>
+  <body class="light-mode">
+    <nav
+      id="navbar"
+      class="container navbar navbar-expand-md navbar-light bg-light border"
+    >
+      <a class="navbar-brand" href="index.html">
+        <img
+          src="Images/iconHouse2.png"
+          width="30"
+          height="30"
+          class="d-inline-block align-top"
+          alt=""
+        />
+        TGIF
+      </a>
 
-<body class="light-mode">
+      <button
+        class="navbar-toggler"
+        type="button"
+        data-toggle="collapse"
+        data-target="#navbarSupportedContent"
+        aria-controls="navbarSupportedContent"
+        aria-expanded="false"
+        aria-label="Toggle navigation"
+      >
+        <span class="navbar-toggler-icon"></span>
+      </button>
 
-	<nav id="navbar" class="container navbar navbar-expand-md navbar-light bg-light border">
-		
-		<a class="navbar-brand" href="index.html">
-			<img src="Images/iconHouse2.png" width="30" height="30" class="d-inline-block align-top" alt="">
-			TGIF
-		</a>
+      <div class="collapse navbar-collapse" id="navbarSupportedContent">
+        <ul class="navbar-nav mr-auto">
+          <li class="nav-item active">
+            <a class="nav-link" href="index.html"
+              >Home <span class="sr-only">(current)</span></a
+            >
+          </li>
 
-		<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
-			aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-			<span class="navbar-toggler-icon"></span>
-		</button>
+          <li class="nav-item dropdown">
+            <a
+              class="nav-link dropdown-toggle"
+              href="#"
+              id="navbarDropdown"
+              role="button"
+              data-toggle="dropdown"
+              aria-haspopup="true"
+              aria-expanded="false"
+            >
+              Congress 113
+            </a>
 
-		<div class="collapse navbar-collapse" id="navbarSupportedContent">
+            <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+              <a class="dropdown-item" href="house-data.html">House</a>
+              <div class="dropdown-divider"></div>
+              <a class="dropdown-item" href="#">Senate</a>
+            </div>
+          </li>
+        </ul>
 
-			<ul class="navbar-nav mr-auto">
+        <form class="form-inline my-2 my-lg-0">
+          <input
+            class="form-control mr-sm-2"
+            type="search"
+            id="searchInput"
+            placeholder="Search for name..."
+            aria-label="Search"
+            onkeyup="filterByName()"
+          />
+        </form>
+      </div>
+    </nav>
 
-				<li class="nav-item active">
-					<a class="nav-link" href="index.html">Home <span class="sr-only">(current)</span></a>
-				</li>
+    <!--Table container-->
+    <div class="container content">
+      <h2>Senators</h2>
+      <p>
+        First convened in 1789, the composition and powers of the Senate are
+        established in Article One of the U.S. Constitution. Each state is
+        represented by two senators, regardless of population, who serve
+        staggered six-year terms. The Senate has several exclusive powers not
+        granted to the House, including consenting to treaties as a precondition
+        to their ratification and consenting to or confirming appointments of
+        Cabinet secretaries, federal judges, other federal executive officials,
+        military officers, regulatory officials, ambassadors, and other federal
+        uniformed officers, as well as trial of federal officials impeached by
+        the House.
+      </p>
+    </div>
 
-				<li class="nav-item dropdown">
-					<a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown"
-						aria-haspopup="true" aria-expanded="false">
-						Congress 113
-					</a>
+    <div class="container content" id="checkboxes">
+      <p>Filter by Party:</p>
+      <label
+        ><input
+          type="radio"
+          name="party"
+          id="republican"
+          onclick='partyFilter("")'
+          checked
+        />
+        show All
+      </label>
+      <label
+        ><input
+          type="radio"
+          name="party"
+          id="republican"
+          onclick='partyFilter("R")'
+        />
+        Republican
+      </label>
+      <label
+        ><input
+          type="radio"
+          name="party"
+          id="democrat"
+          onclick='partyFilter("D")'
+        />
+        Democrat
+      </label>
+      <label
+        ><input
+          type="radio"
+          name="party"
+          id="independent"
+          onclick='partyFilter("I")'
+        />
+        Independent
+      </label>
+    </div>
 
-					<div class="dropdown-menu" aria-labelledby="navbarDropdown">
-						<a class="dropdown-item" href="house-data.html">House</a>
-						<div class="dropdown-divider"></div>
-						<a class="dropdown-item" href="#">Senate</a>
-					</div>
+    <div class="container content">
+      <select name="state" id="stateSelect"> </select>
+    </div>
 
-				</li>
-			</ul>
+    <table class="container table table-hover">
+      <thead>
+        <tr>
+          <td>Name</td>
+          <td>Party</td>
+          <td>State</td>
+          <td>Years in Office</td>
+          <td>% Votes with party</td>
+        </tr>
+      </thead>
+      <tbody id="senateData"></tbody>
+    </table>
 
-			<form class="form-inline my-2 my-lg-0">
-					<input class="form-control mr-sm-2" type="search" id="searchInput" placeholder="Search for name..." aria-label="Search" onkeyup="filterByName()">
-			</form>
+    <footer class="container content bg-light border my-auto">
+      <p>&copy; 2016 TGIF | All Right Reserved</p>
+    </footer>
 
-		</div>
-
-	</nav>
-
-	<!--Table container-->
-	<div class="container content">
-		<h2>Senators</h2>
-		<p>First convened in 1789, the composition and powers of the Senate are established in Article One of the U.S.
-			Constitution. Each state is represented by two senators, regardless of population, who serve staggered six-year
-			terms. The Senate has several exclusive powers not granted to the House, including consenting to treaties as a
-			precondition to their ratification and consenting to or confirming appointments of Cabinet secretaries, federal
-			judges, other federal executive officials, military officers, regulatory officials, ambassadors, and other federal
-			uniformed officers, as well as trial of federal officials impeached by the House.</p>
-	</div>
-
-	<div class="container content" id="checkboxes">
-		<p>Filter by Party: </p>
-		<label><input type="radio" name="party" id="republican" onclick='partyFilter("")' checked> show All </label>
-		<label><input type="radio" name="party" id="republican" onclick='partyFilter("R")'> Republican </label>
-		<label><input type="radio" name="party" id="democrat" onclick='partyFilter("D")'> Democrat </label>
-		<label><input type="radio" name="party" id="independent" onclick='partyFilter("I")'> Independent </label>
-	</div>
-
-	<div class="container content">
-		<select name="state" id="stateSelect">
-		</select>
-	</div>
-
-	<table class="container table table-hover">
-		<thead>
-			<tr>
-				<td>Name</td>
-				<td>Party</td>
-				<td>State</td>
-				<td>Years in Office</td>
-				<td>% Votes with party</td>
-			</tr>
-		</thead>
-		<tbody id="senateData">
-		</tbody>
-	</table>
-
-	<footer class="container content bg-light border my-auto">
-		<p>&copy; 2016 TGIF | All Right Reserved</p> 
-	</footer>
-
-	<script src="113-senate.js"></script>
-	<script src="main.js"></script>
-	<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
-		integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
-		crossorigin="anonymous"></script>
-	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
-		integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
-		crossorigin="anonymous"></script>
-	<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
-		integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
-		crossorigin="anonymous"></script>
-</body>
-
+    <script src="113-senate.js"></script>
+    <script src="main.js"></script>
+    <script
+      src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
+      integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
+      crossorigin="anonymous"
+    ></script>
+    <script
+      src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
+      integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
+      crossorigin="anonymous"
+    ></script>
+    <script
+      src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
+      integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
+      crossorigin="anonymous"
+    ></script>
+  </body>
 </html>
