--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
           class="d-inline-block align-top"
           alt=""
         />
-        TGIF
+        Transparent Government in Fact
       </a>
 
       <button
@@ -213,19 +213,17 @@
           </div>
         </div>
       </div>
-
-
+      <img
+        class="content media"
+        id="homeLogo"
+        src="images/iconHouse2.png"
+        alt="Logo for the Transparent Government in Fact association"
+      />
     </div>
 
-    <!-- <footer class="container content footer bg-light border">
-        <p>&copy; 2016 TGIF | All Right Reserved</p>
-      </footer> -->
-
-    <div>
-      <footer>
-          <p>&copy; 2016 TGIF | All Right Reserved</p>
-      </footer>
-    </div>
+    <footer id="footer" class="container content bg-light border my-auto">
+      <p>&copy; 2016 TGIF | All Right Reserved</p>
+    </footer>
 
     <div id="anyOtherPageWithoutTable"></div>
 
