--- a/senate-data.html
+++ b/senate-data.html
@@ -93,90 +93,93 @@
       </div>
     </nav>
 
-    <!--Table container-->
     <div class="container content">
-      <h2>Senators</h2>
-      <p>
-        First convened in 1789, the composition and powers of the Senate are
-        established in Article One of the U.S. Constitution. Each state is
-        represented by two senators, regardless of population, who serve
-        staggered six-year terms. The Senate has several exclusive powers not
-        granted to the House, including consenting to treaties as a precondition
-        to their ratification and consenting to or confirming appointments of
-        Cabinet secretaries, federal judges, other federal executive officials,
-        military officers, regulatory officials, ambassadors, and other federal
-        uniformed officers, as well as trial of federal officials impeached by
-        the House.
-      </p>
-    </div>
+      <div>
+        <h2>Senators</h2>
+        <p>
+          First convened in 1789, the composition and powers of the Senate are
+          established in Article One of the U.S. Constitution. Each state is
+          represented by two senators, regardless of population, who serve
+          staggered six-year terms. The Senate has several exclusive powers not
+          granted to the House, including consenting to treaties as a
+          precondition to their ratification and consenting to or confirming
+          appointments of Cabinet secretaries, federal judges, other federal
+          executive officials, military officers, regulatory officials,
+          ambassadors, and other federal uniformed officers, as well as trial of
+          federal officials impeached by the House.
+        </p>
+      </div>
 
-    <div class="container content" id="checkboxes">
-      <p>Filter by Party:</p>
-      <label
-        ><input
-          type="radio"
-          name="party"
-          id="all"
-          value="All"
-          onclick="partyFilter();"
-          checked
-        />
-        Show All
-      </label>
-      <label
-        ><input
-          type="radio"
-          name="party"
-          id="republican"
-          value="R"
-          onclick='partyFilter("R");'
-        />
-        Republican
-      </label>
-      <label
-        ><input
-          type="radio"
-          name="party"
-          id="democrat"
-          value="D"
-          onclick='partyFilter("D");'
-        />
-        Democrat
-      </label>
-      <label
-        ><input
-          type="radio"
-          name="party"
-          id="independent"
-          value="I"
-          onclick='partyFilter("I");'
-        />
-        Independent
-      </label>
-    </div>
+      <br />
 
-    <div id="dropdown" class="container content">
+      <div class="container content">
+        Filter by Party:
+        <label
+          ><input
+            type="radio"
+            name="party"
+            id="all"
+            value="All"
+            onclick="partyFilter();"
+            checked
+          />
+          Show All
+        </label>
+        <label
+          ><input
+            type="radio"
+            name="party"
+            id="republican"
+            value="R"
+            onclick='partyFilter("R");'
+          />
+          Republican
+        </label>
+        <label
+          ><input
+            type="radio"
+            name="party"
+            id="democrat"
+            value="D"
+            onclick='partyFilter("D");'
+          />
+          Democrat
+        </label>
+        <label
+          ><input
+            type="radio"
+            name="party"
+            id="independent"
+            value="I"
+            onclick='partyFilter("I");'
+          />
+          Independent
+        </label>
+      </div>
+
+      <div id="dropdown" class="container content">
         Filter By State:
         <select id="stateSelect" onchange="updateTableWithNewState();">
         </select>
       </div>
 
-    <br />
+      <br />
 
-    <table class="container table table-hover">
-      <thead>
-        <tr>
-          <td>Name</td>
-          <td>Party</td>
-          <td>State</td>
-          <td>Years in Office</td>
-          <td>% Votes with party</td>
-        </tr>
-      </thead>
-      <tbody id="senateData"></tbody>
-    </table>
+      <table class="container table table-hover">
+        <thead>
+          <tr>
+            <td>Name</td>
+            <td>Party</td>
+            <td>State</td>
+            <td>Years in Office</td>
+            <td>% Votes with party</td>
+          </tr>
+        </thead>
+        <tbody id="senateData"></tbody>
+      </table>
+    </div>
 
-    <footer class="container content bg-light border my-auto">
+    <footer id="footer" class="container content bg-light border my-auto">
       <p>&copy; 2016 TGIF | All Right Reserved</p>
     </footer>
 
