--- a/house-data.html
+++ b/house-data.html
@@ -12,9 +12,9 @@
 
 <body>
   <nav id="navbar" class="container navbar navbar-expand-md navbar-light bg-light border sticky-top">
-    <a class="navbar-brand" href="index.html">
+    <a class="navbar-brand" href="#">
       <img src="Images/iconHouse2.png" width="30" height="30" class="d-inline-block align-top" alt="" />
-      TGIF
+      Transparent Government in Fact
     </a>
 
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
@@ -25,7 +25,7 @@
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav mr-auto">
         <li class="nav-item active">
-          <a class="nav-link" href="index.html">Home <span class="sr-only">(current)</span></a>
+          <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
         </li>
 
         <li class="nav-item dropdown">
@@ -35,17 +35,36 @@
           </a>
 
           <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-            <a class="dropdown-item" href="#">House</a>
+            <a class="dropdown-item" href="house-data.html">House</a>
             <div class="dropdown-divider"></div>
             <a class="dropdown-item" href="senate-data.html">Senate</a>
           </div>
         </li>
-      </ul>
+        <li class="nav-item dropdown">
+          <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown"
+            aria-haspopup="true" aria-expanded="false">
+            Attendance
+          </a>
 
-      <form class="form-inline my-2 my-lg-0">
-        <input class="form-control mr-sm-2" type="search" id="searchInput" placeholder="Search for name..."
-          aria-label="Search" onkeyup="filterByName()" />
-      </form>
+          <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+            <a class="dropdown-item" href="house-attendance.html">House</a>
+            <div class="dropdown-divider"></div>
+            <a class="dropdown-item" href="senate-attendance.html">Senate</a>
+          </div>
+        </li>
+        <li class="nav-item dropdown">
+          <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown"
+            aria-haspopup="true" aria-expanded="false">
+            Party Loyalty
+          </a>
+
+          <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+            <a class="dropdown-item" href="house-party-loyalty.html">House</a>
+            <div class="dropdown-divider"></div>
+            <a class="dropdown-item" href="senate-party-loyalty.html">Senate</a>
+          </div>
+        </li>
+      </ul>
     </div>
   </nav>
 
