--- a/index.html
+++ b/index.html
@@ -46,6 +46,30 @@
             <a class="dropdown-item" href="senate-data.html">Senate</a>
           </div>
         </li>
+        <li class="nav-item dropdown">
+          <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown"
+            aria-haspopup="true" aria-expanded="false">
+            Attendance
+          </a>
+
+          <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+            <a class="dropdown-item" href="house-attendance.html">House</a>
+            <div class="dropdown-divider"></div>
+            <a class="dropdown-item" href="senate-attendance.html">Senate</a>
+          </div>
+        </li>
+        <li class="nav-item dropdown">
+          <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown"
+            aria-haspopup="true" aria-expanded="false">
+            Party Loyalty
+          </a>
+
+          <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+            <a class="dropdown-item" href="house-party-loyalty.html">House</a>
+            <div class="dropdown-divider"></div>
+            <a class="dropdown-item" href="senate-party-loyalty.html">Senate</a>
+          </div>
+        </li>
       </ul>
     </div>
   </nav>
